<resources>
    <string name="app_name">Carpool</string>
    <string name="signupSentence">Don\'t have an account? \nSign up</string>
    <string name="enterEmail">Email</string>
    <string name="enterFirstName">First Name</string>
    <string name="enterLastName">Last Name</string>
    <string name="enterPass">Password</string>
    <string name="loginButton">Login</string>
    <string name="signUpButton">Join Now</string>
    <string name="policytxt">By clicking Join Now you agree to Abdo\'s User Agreement</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">Carpool</string>
    <string name="login_title">Welcome Back</string>
    <string name="signup_title">Welcome to the carpool family</string>
    <string name="app_logo">App Logo</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="history">History</string>
    <string name="routes">Routes</string>
    <string name="my_cart">My Cart</string>
    <string name="history_title">History</string>
    <string name="description">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="total_price_25">Total price = $ 25</string>
    <string name="pay_now">Pay now</string>
    <string name="track_your_order_now">Track your order now!</string>
    <string name="status">Date :</string>
    <string name="order_id">Started at :</string>
    <string name="tickets_number">Start Point :</string>
    <string name="date">Destination :</string>
    <string name="student">Student</string>
    <string name="driver">Driver</string>
    <string name="_1">1</string>
    <string name="from">from :</string>
    <string name="asu">Ain Shams</string>
    <string name="to">to :</string>
    <string name="my_profile">My Profile</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="currently_logged_in">Currently Logged In</string>
    <string name="toggle_bypass">Toggle Bypass</string>

    <string-array name="places">
        <item>Abaseya</item>
        <item>New Cairo</item>
        <item>Nasr City</item>
        <item>5th Settlement</item>
    </string-array>
</resources>
