<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/welcome_back2"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/amaranth"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="@color/textgold"
            android:textSize="34sp" />


        <EditText
            android:id="@+id/loginEmail"
            style="@style/EditTextCommonStyle"
            android:drawableStart="@drawable/baseline_email_24"
            android:hint="@string/enterEmail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/loginPassword"
            style="@style/EditTextCommonStyle"
            android:drawableStart="@drawable/baseline_lock_24"
            android:hint="@string/enterPass"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginbtn"
            style="@style/ButtonStyle"
            android:text="@string/loginButton"/>

        <TextView
            android:id="@+id/signUptxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="22dp"
            android:layout_marginRight="48dp"
            android:fontFamily="@font/amaranth"
            android:hapticFeedbackEnabled="false"
            android:text="@string/signupSentence"
            android:textAlignment="center"
            android:textColor="@color/textgold"
            android:textSize="16sp" />


    </LinearLayout>


</FrameLayout>