<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Cart.cart"
    >


    <TextView
        android:id="@+id/allRoutes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:text="@string/my_cart"
        android:textColor="@color/black"
        android:textSize="40sp"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/priceTxt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/total_price_25"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/payBtn"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/pay_now"
            android:textSize="20sp" />
    </LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>
