<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Route.Routes">

    <TextView
        android:id="@+id/allRoutes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:text="@string/routes"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/dest"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.7"
        android:background="@drawable/navigate_back"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/fromLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/asu"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:src="@drawable/baseline_swap_horiz_24" />

        <LinearLayout
            android:id="@+id/toLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingEnd="25dp"
                android:spinnerMode="dropdown"
                android:textAlignment="center" />

            <!--            <Spinner-->
            <!--                android:id="@+id/spinner"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="0dp"-->
            <!--                android:layout_weight="1"-->
            <!--                android:gravity="center" />-->
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/routes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        >

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/bypass"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center|center_horizontal"
        android:text="@string/toggle_bypass"
        android:textSize="20sp" />
</androidx.appcompat.widget.LinearLayoutCompat>
